# experian

./: README.md  dot_env  output.json  package-lock.json  pyproject.toml
data/: income_employment.json  rent.json
src/: 00-experian-mcp-server.py  00-risk-client-mcp.py  00-test-mcp.py  01-experian-business.py  02-experian-credit-report.py  client.py  experian-credit-report.py  experian-credit.py  experian-fico.py  server.py
testing/: 01-experian-business.py  02-experian-credit-report.py  README.md
ui/: README.md  client.py  pyproject.toml
