[project]
name = "experian"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.13.0.2",
    "mcp[cli]>=1.21.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.5",
    "starlette>=0.41.3",
    "uvicorn>=0.34.0",
    "sse-starlette>=2.2.1",
]
